datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

generator client {
  provider = "prisma-client-js"
}

enum TenantPlan {
  FREE
  PRO
  ENTERPRISE
}

enum ActorType {
  USER
  VENDOR
  SYSTEM
}

enum KycStatus {
  PENDING
  VERIFIED
  REJECTED
}

enum OrderStatus {
  PENDING
  PAID
  FULFILLED
  DELIVERED
  CANCELLED
  REFUNDED
}

enum PaymentStatus {
  PENDING
  SUCCEEDED
  FAILED
  REFUNDED
  CHARGEBACK
}

enum PayoutStatus {
  PENDING
  PROCESSING
  PAID
  FAILED
}

enum EventScope {
  PLATFORM
  TENANT
  VENDOR
  USER
}

model Tenant {
  id                String            @id @default(cuid())
  name              String
  slug              String            @unique
  plan              TenantPlan        @default(FREE)
  defaultCurrency   String            @default("USD")
  defaultLocale     String            @default("en")
  featureFlags      Json?
  billingEmail      String?
  isActive          Boolean           @default(true)
  createdAt         DateTime          @default(now())
  updatedAt         DateTime          @updatedAt

  users             User[]
  vendors           Vendor[]
  products          Product[]
  orders            Order[]
  subscriptions     Subscription[]
  commissionRules   CommissionRule[]
  auditLogs         AuditLog[]
  events            Event[]
  campaigns         Campaign[]
  referralCodes     ReferralCode[]
}

model User {
  id                String            @id @default(cuid())
  tenantId          String
  email             String
  name              String?
  passwordHash      String?
  phone             String?
  isActive          Boolean           @default(true)
  lastLoginAt       DateTime?
  createdAt         DateTime          @default(now())
  updatedAt         DateTime          @updatedAt

  tenant            Tenant            @relation(fields: [tenantId], references: [id], onDelete: Cascade)
  roles             UserRole[]
  sessions          Session[]
  oauthAccounts     OAuthAccount[]
  mfaMethods        MfaMethod[]
  ownedVendors      Vendor[]
  vendorMemberships VendorMember[]
  orders            Order[]
  carts             Cart[]
  loyaltyAccounts   LoyaltyAccount[]
  referralCodes     ReferralCode[]
  referralEvents    ReferralEvent[]   @relation("ReferralInvitee")
  notificationPrefs NotificationPref[]

  @@unique([tenantId, email])
  @@index([tenantId, isActive])
}

model UserRole {
  id                String            @id @default(cuid())
  userId            String
  role              String
  scope             String?
  createdAt         DateTime          @default(now())

  user              User              @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([userId, role, scope])
}

model Session {
  id                String            @id @default(cuid())
  userId            String
  refreshTokenHash  String
  userAgent         String?
  ipAddress         String?
  expiresAt         DateTime
  createdAt         DateTime          @default(now())

  user              User              @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId, expiresAt])
}

model OAuthAccount {
  id                String            @id @default(cuid())
  userId            String
  provider          String
  providerUserId    String
  accessToken       String?
  refreshToken      String?
  expiresAt         DateTime?

  user              User              @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([provider, providerUserId])
}

model MfaMethod {
  id                String            @id @default(cuid())
  userId            String
  type              String
  secretEncrypted   String?
  backupCodesHash   Json?
  isPrimary         Boolean           @default(false)
  createdAt         DateTime          @default(now())

  user              User              @relation(fields: [userId], references: [id], onDelete: Cascade)
}

model Vendor {
  id                String            @id @default(cuid())
  tenantId          String
  ownerUserId       String?
  storeName         String
  legalName         String?
  email             String
  status            String            @default("pending")
  kycStatus         KycStatus         @default(PENDING)
  healthScore       Decimal?          @db.Decimal(5, 2)
  stripeAccountId   String?
  commissionRate    Decimal           @default(10.00) @db.Decimal(5, 2)
  createdAt         DateTime          @default(now())
  updatedAt         DateTime          @updatedAt

  tenant            Tenant            @relation(fields: [tenantId], references: [id], onDelete: Cascade)
  ownerUser         User?             @relation(fields: [ownerUserId], references: [id], onDelete: SetNull)
  products          Product[]
  orderItems        OrderItem[]
  payouts           Payout[]
  disputes          Dispute[]
  vendorMembers     VendorMember[]
  vendorKycDocs     VendorKycDoc[]

  @@unique([tenantId, email])
  @@index([tenantId, status])
}

model VendorMember {
  id                String            @id @default(cuid())
  vendorId          String
  userId            String
  role              String
  createdAt         DateTime          @default(now())

  vendor            Vendor            @relation(fields: [vendorId], references: [id], onDelete: Cascade)
  user              User              @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([vendorId, userId])
}

model VendorKycDoc {
  id                String            @id @default(cuid())
  vendorId          String
  documentType      String
  storageUrl        String
  status            KycStatus         @default(PENDING)
  reviewedBy        String?
  reviewedAt        DateTime?
  createdAt         DateTime          @default(now())

  vendor            Vendor            @relation(fields: [vendorId], references: [id], onDelete: Cascade)

  @@index([vendorId, status])
}

model Category {
  id                String            @id @default(cuid())
  tenantId          String
  name              String
  slug              String
  parentId          String?
  createdAt         DateTime          @default(now())

  parent            Category?         @relation("CategoryTree", fields: [parentId], references: [id], onDelete: SetNull)
  children          Category[]        @relation("CategoryTree")
  products          Product[]

  @@unique([tenantId, slug])
}

model Product {
  id                String            @id @default(cuid())
  tenantId          String
  vendorId          String
  categoryId        String?
  name              String
  slug              String
  description       String
  status            String            @default("draft")
  basePrice         Decimal           @db.Decimal(12, 2)
  compareAtPrice    Decimal?          @db.Decimal(12, 2)
  currency          String            @default("USD")
  imageUrls         String[]
  seoTitle          String?
  seoDescription    String?
  createdAt         DateTime          @default(now())
  updatedAt         DateTime          @updatedAt

  tenant            Tenant            @relation(fields: [tenantId], references: [id], onDelete: Cascade)
  vendor            Vendor            @relation(fields: [vendorId], references: [id], onDelete: Cascade)
  category          Category?         @relation(fields: [categoryId], references: [id], onDelete: SetNull)
  variants          ProductVariant[]
  orderItems        OrderItem[]
  cartItems         CartItem[]

  @@unique([tenantId, slug])
  @@index([tenantId, vendorId, status])
}

model ProductVariant {
  id                String            @id @default(cuid())
  productId         String
  sku               String
  attributes        Json
  price             Decimal           @db.Decimal(12, 2)
  compareAtPrice    Decimal?          @db.Decimal(12, 2)
  createdAt         DateTime          @default(now())

  product           Product           @relation(fields: [productId], references: [id], onDelete: Cascade)
  inventory         Inventory?

  @@unique([productId, sku])
}

model Inventory {
  id                String            @id @default(cuid())
  variantId         String            @unique
  quantity          Int               @default(0)
  lowStockThreshold Int               @default(10)
  updatedAt         DateTime          @updatedAt

  variant           ProductVariant    @relation(fields: [variantId], references: [id], onDelete: Cascade)
}

model Cart {
  id                String            @id @default(cuid())
  tenantId          String
  userId            String
  createdAt         DateTime          @default(now())
  updatedAt         DateTime          @updatedAt

  user              User              @relation(fields: [userId], references: [id], onDelete: Cascade)
  items             CartItem[]

  @@index([tenantId, userId])
}

model CartItem {
  id                String            @id @default(cuid())
  cartId            String
  productId         String
  quantity          Int               @default(1)
  createdAt         DateTime          @default(now())

  cart              Cart              @relation(fields: [cartId], references: [id], onDelete: Cascade)
  product           Product           @relation(fields: [productId], references: [id], onDelete: Cascade)

  @@unique([cartId, productId])
}

model Order {
  id                String            @id @default(cuid())
  tenantId          String
  userId            String
  orderNumber       String            @unique
  status            OrderStatus       @default(PENDING)
  paymentStatus     PaymentStatus     @default(PENDING)
  subtotalAmount    Decimal           @db.Decimal(12, 2)
  shippingAmount    Decimal           @default(0) @db.Decimal(12, 2)
  taxAmount         Decimal           @default(0) @db.Decimal(12, 2)
  discountAmount    Decimal           @default(0) @db.Decimal(12, 2)
  totalAmount       Decimal           @db.Decimal(12, 2)
  currency          String            @default("USD")
  shippingAddress   Json
  billingAddress    Json
  createdAt         DateTime          @default(now())
  updatedAt         DateTime          @updatedAt

  tenant            Tenant            @relation(fields: [tenantId], references: [id], onDelete: Cascade)
  user              User              @relation(fields: [userId], references: [id])
  items             OrderItem[]
  paymentIntents    PaymentIntent[]
  refunds           Refund[]
  disputes          Dispute[]

  @@index([tenantId, status, createdAt])
}

model OrderItem {
  id                String            @id @default(cuid())
  orderId           String
  productId         String
  vendorId          String
  quantity          Int
  unitPrice         Decimal           @db.Decimal(12, 2)
  lineTotal         Decimal           @db.Decimal(12, 2)

  order             Order             @relation(fields: [orderId], references: [id], onDelete: Cascade)
  product           Product           @relation(fields: [productId], references: [id])
  vendor            Vendor            @relation(fields: [vendorId], references: [id])

  @@index([orderId, vendorId])
}

model PaymentIntent {
  id                String            @id @default(cuid())
  tenantId          String
  orderId           String
  provider          String            @default("stripe")
  providerIntentId  String            @unique
  status            PaymentStatus
  amount            Decimal           @db.Decimal(12, 2)
  currency          String
  metadata          Json?
  createdAt         DateTime          @default(now())

  order             Order             @relation(fields: [orderId], references: [id], onDelete: Cascade)

  @@index([tenantId, status, createdAt])
}

model Refund {
  id                String            @id @default(cuid())
  orderId           String
  amount            Decimal           @db.Decimal(12, 2)
  reason            String?
  providerRefundId  String?
  createdAt         DateTime          @default(now())

  order             Order             @relation(fields: [orderId], references: [id], onDelete: Cascade)
}

model Chargeback {
  id                String            @id @default(cuid())
  tenantId          String
  orderId           String
  reasonCode        String?
  amount            Decimal           @db.Decimal(12, 2)
  status            String
  createdAt         DateTime          @default(now())

  @@index([tenantId, status])
}

model Payout {
  id                String            @id @default(cuid())
  tenantId          String
  vendorId          String
  providerPayoutId  String?
  status            PayoutStatus      @default(PENDING)
  amountGross       Decimal           @db.Decimal(12, 2)
  commissionAmount  Decimal           @db.Decimal(12, 2)
  amountNet         Decimal           @db.Decimal(12, 2)
  currency          String
  scheduledAt       DateTime?
  paidAt            DateTime?
  createdAt         DateTime          @default(now())

  vendor            Vendor            @relation(fields: [vendorId], references: [id])

  @@index([tenantId, vendorId, status])
}

model CommissionRule {
  id                String            @id @default(cuid())
  tenantId          String
  name              String
  ratePercent       Decimal           @db.Decimal(5, 2)
  appliesTo         String
  isActive          Boolean           @default(true)
  createdAt         DateTime          @default(now())

  tenant            Tenant            @relation(fields: [tenantId], references: [id], onDelete: Cascade)
}

model SubscriptionPlan {
  id                String            @id @default(cuid())
  code              String            @unique
  name              String
  priceMonthly      Decimal           @db.Decimal(12, 2)
  limits            Json?
  createdAt         DateTime          @default(now())

  subscriptions     Subscription[]
}

model Subscription {
  id                String            @id @default(cuid())
  tenantId          String
  userId            String?
  vendorId          String?
  planId            String
  status            String            @default("active")
  currentPeriodEnd  DateTime
  createdAt         DateTime          @default(now())

  tenant            Tenant            @relation(fields: [tenantId], references: [id], onDelete: Cascade)
  plan              SubscriptionPlan  @relation(fields: [planId], references: [id])

  @@index([tenantId, status])
}

model Dispute {
  id                String            @id @default(cuid())
  orderId           String
  vendorId          String
  openedByUserId    String?
  status            String            @default("open")
  reason            String?
  resolution        String?
  createdAt         DateTime          @default(now())

  order             Order             @relation(fields: [orderId], references: [id], onDelete: Cascade)
  vendor            Vendor            @relation(fields: [vendorId], references: [id])

  @@index([vendorId, status])
}

model Event {
  id                String            @id @default(cuid())
  tenantId          String?
  scope             EventScope
  name              String
  actorType         ActorType
  actorId           String?
  sessionId         String?
  ipAddress         String?
  userAgent         String?
  properties        Json?
  createdAt         DateTime          @default(now())

  tenant            Tenant?           @relation(fields: [tenantId], references: [id], onDelete: Cascade)

  @@index([name, createdAt])
  @@index([tenantId, createdAt])
}

model AuditLog {
  id                String            @id @default(cuid())
  tenantId          String
  actorType         ActorType
  actorId           String?
  action            String
  targetType        String
  targetId          String?
  metadata          Json?
  createdAt         DateTime          @default(now())

  tenant            Tenant            @relation(fields: [tenantId], references: [id], onDelete: Cascade)

  @@index([tenantId, createdAt])
}

model FraudSignal {
  id                String            @id @default(cuid())
  tenantId          String?
  userId            String?
  vendorId          String?
  orderId           String?
  signalType        String
  score             Decimal           @db.Decimal(5, 2)
  payload           Json?
  createdAt         DateTime          @default(now())

  @@index([signalType, createdAt])
}

model ReferralCode {
  id                String            @id @default(cuid())
  tenantId          String
  ownerUserId       String
  code              String
  rewardRule        Json
  isActive          Boolean           @default(true)
  createdAt         DateTime          @default(now())

  tenant            Tenant            @relation(fields: [tenantId], references: [id], onDelete: Cascade)
  ownerUser         User              @relation(fields: [ownerUserId], references: [id], onDelete: Cascade)
  events            ReferralEvent[]

  @@unique([tenantId, code])
}

model ReferralEvent {
  id                String            @id @default(cuid())
  referralCodeId    String
  inviteeUserId     String
  status            String            @default("pending")
  rewardIssued      Boolean           @default(false)
  createdAt         DateTime          @default(now())

  referralCode      ReferralCode      @relation(fields: [referralCodeId], references: [id], onDelete: Cascade)
  inviteeUser       User              @relation("ReferralInvitee", fields: [inviteeUserId], references: [id], onDelete: Cascade)

  @@index([status, createdAt])
}

model Campaign {
  id                String            @id @default(cuid())
  tenantId          String
  name              String
  channel           String
  budgetAmount      Decimal?          @db.Decimal(12, 2)
  startsAt          DateTime?
  endsAt            DateTime?
  metadata          Json?
  createdAt         DateTime          @default(now())

  tenant            Tenant            @relation(fields: [tenantId], references: [id], onDelete: Cascade)
}

model AttributionTouch {
  id                String            @id @default(cuid())
  tenantId          String?
  userId            String?
  source            String?
  medium            String?
  campaign          String?
  content           String?
  createdAt         DateTime          @default(now())

  @@index([campaign, createdAt])
}

model LoyaltyAccount {
  id                String            @id @default(cuid())
  userId            String
  pointsBalance     Int               @default(0)
  tier              String            @default("bronze")
  createdAt         DateTime          @default(now())
  updatedAt         DateTime          @updatedAt

  user              User              @relation(fields: [userId], references: [id], onDelete: Cascade)
  ledger            LoyaltyLedger[]
}

model LoyaltyLedger {
  id                String            @id @default(cuid())
  loyaltyAccountId  String
  deltaPoints       Int
  reason            String
  createdAt         DateTime          @default(now())

  loyaltyAccount    LoyaltyAccount    @relation(fields: [loyaltyAccountId], references: [id], onDelete: Cascade)
}

model NotificationPref {
  id                String            @id @default(cuid())
  userId            String
  emailEnabled      Boolean           @default(true)
  smsEnabled        Boolean           @default(false)
  pushEnabled       Boolean           @default(true)

  user              User              @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([userId])
}

model RegionPrice {
  id                String            @id @default(cuid())
  productId         String
  countryCode       String
  currency          String
  unitPrice         Decimal           @db.Decimal(12, 2)

  @@unique([productId, countryCode, currency])
}

model ConsentRecord {
  id                String            @id @default(cuid())
  tenantId          String?
  userId            String?
  consentType       String
  granted           Boolean
  grantedAt         DateTime          @default(now())
  revokedAt         DateTime?
}

model DataExportJob {
  id                String            @id @default(cuid())
  tenantId          String?
  userId            String?
  status            String            @default("queued")
  outputUrl         String?
  requestedAt       DateTime          @default(now())
  completedAt       DateTime?
}

model DataDeletionJob {
  id                String            @id @default(cuid())
  tenantId          String?
  userId            String?
  status            String            @default("queued")
  requestedAt       DateTime          @default(now())
  completedAt       DateTime?
}